--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,6 @@
+
+$body-bg: 	white;
+$navbar-default-bg: #34495e;
+$navbar-default-link-color: white;
+$brand-primary: #3498db;
 @import 'bootstrap';
